# did-web-annuaire-be

./: .dockerignore  .gitignore  INTEGRATION.md  LICENSE  README.md  compose.yml  compose.yml.srv  entrypoint.sh  models.dot  new  new.json  nginx.conf  nginx.conf.old  output.txt  plan.md  pyproject.toml  rav.yaml  setup-infra.sh  todo
.github/workflows/: build-push-prime.yml  deploy-staging-prime.yml  skylos.yml
.skylos/cache/: osv_cache.json
DIF/: application-uniregistrar.yml  application-uniresolver.yml  compose.yml  universalregistrar.yml  universalresolver.yml
annuairedid/: manage.py
annuairedid/annuairedid/: asgi.py  settings.py  wsgi.py
docker/: Dockerfile
docs/: resources.md
jwk_extract/: build.gradle.kts  settings.gradle.kts
jwk_extract/gradle/wrapper/: gradle-wrapper.properties
keyfactor/: keyfactor-ejbca.yml  keyfactor-signserver-ce.yml
keys/: ManagementCA.pem  Prince David Alex ELEANYA.p12
nginx-certs/: localhost.pem  nginx-ec.csr  nginx-ec.key  req-ec.conf
src/: __init__.py  asgi.py  gunicorn.conf.py  manage.py  tasks.py  urls.py  wsgi.py
src/.skylos/cache/: pypi_exists.json
src/apps/apiclients/: apis.py  apps.py  auth.py  models.py  schemas.py
src/apps/apiclients/migrations/: 0001_initial.py
src/apps/audits/: admin.py  apps.py  models.py  services.py  tasks.py
src/apps/audits/migrations/: 0001_initial.py  0002_alter_auditlog_action.py  0003_alter_auditlog_action.py  0004_alter_auditlog_action.py  0005_alter_auditlog_action.py  0006_alter_auditlog_action_alter_auditlog_resource_type.py  0006_alter_auditlog_resource_type.py  (+3 more)
src/apps/authentication/: apis.py  jwt_controller.py  schemas.py  services.py  tasks.py
src/apps/certificates/: admin.py  apis.py  apps.py  maps.py  models.py  schemas.py  selectors.py  services.py  views.py
src/apps/documents/: admin.py  apis.py  apps.py  assembler.py  models.py  public_apis.py  schemas.py  selectors.py  services.py  views.py
src/apps/emails/: admin.py  apps.py  models.py  services.py  tasks.py
src/apps/files/: admin.py  apps.py  models.py  services.py  utils.py
src/apps/frontend/: apps.py  search.html  urls.py  views.py
src/apps/orgadmin/: apis.py  apps.py  schemas.py  urls.py  views.py
src/apps/organizations/: admin.py  apps.py  models.py  selectors.py  services.py
src/apps/superadmin/: apis.py  apps.py  schemas.py  urls.py  views.py
src/apps/users/: admin.py  managers.py  models.py  schemas.py  selectors.py  services.py
src/bootstrap/: apps.py
src/common/: exceptions.py  middleware.py  models.py  pagination.py  permissions.py  request_context.py  throttling.py  types.py
src/common/did/: assembler.py
src/config/: celery_app.py  env.py
src/config/django/: base.py  prod.py  test.py
src/config/others/: celery_conf.py  cors.py  email_sending.py  files_and_storages.py  jwt.py  logging_conf.py  session.py
src/integrations/: cert_service.py  registrar.py  resolver.py  signserver.py
src/seeders/: apps.py
src/xlib/: enum_to_env.py  enums.py
staticfiles/app/css/: certificates.css  main.css  orgadmin.css  public.css
staticfiles/app/js/: auth.js  certificates.js  documents.js  orgadmin.js  superadmin.js
(+86 files in other folders)
