[project]
name = "did-web-annuaire-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "base45>=0.4.4",
    "cbor2>=5.9.0",
    "celery[redis]>=5.3.1",
    "django>=6.0.3",
    "django-celery-beat>=2.9.0",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.9.0",
    "django-extensions>=4.1",
    "django-htmx>=1.27.0",
    "django-ninja>=1.5.3",
    "django-ninja-extra>=0.31.0",
    "django-ninja-jwt>=5.4.4",
    "django-structlog>=10.0.0",
    "gunicorn>=25.1.0",
    "jcs>=0.2.1",
    "psycopg[c]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.2",
    "redis>=7.2.0",
    "requests>=2.32.5",
    "structlog>=25.5.0",
    "whitenoise[brotli]>=6.12.0",
]

[dependency-groups]
dev = [
    "rav>=0.4.3",
    "ruff>=0.15.5",
]
